Added Material-UI. Added TopBar, RegisterModal components

--- a/client/src/components/ExamplesList/ExamplesList.scss
+++ b/client/src/components/ExamplesList/ExamplesList.scss
@@ -1,14 +1,7 @@
-.App {
+.container {
   text-align: center;
-}
-
-header {
-  background-color: #282c34;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding: 10px;
 }
